--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.171.0",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "@cloudcommerce/app-melhor-envio": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
