--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "three": "^0.171.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.2",
-    "@cloudcommerce/app-melhor-envio": "^2.0.0"
+    "@cloudcommerce/app-melhor-envio": "^2.0.0",
+    "yampi-mcp-server": "latest"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
