--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "vaul": "^1.1.2",
     "zod": "^3.24.2",
     "@cloudcommerce/app-melhor-envio": "^2.0.0",
-    "yampi-mcp-server": "latest"
+    "yampi-mcp-server": "latest",
+    "n8n-nodes-autentique": "latest"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
